# jaffle_shop

./: .editorconfig  .gitignore  .user.yml  Pipfile  dbt_project.yml  index.html  packages.yml  profiles.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: run-elementary.yml
edr_target/: elementary_output.json  elementary_report.html  index..html  index.html
models/: dim_customers.sql
models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql
models/marts/core/: dim_customers.sql  fct_orders.sql  fct_orders.yml
models/staging/jaffle_shop/: src_jaffle_shop.yml  stg_customers.sql  stg_jaffle_shop.yml  stg_orders.sql
models/staging/stripe/: stg_payments.sql
tests/: assert_positive_order_amount.sql  assert_positive_total_payments.sql
