[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaffle-shop"
version = "0.0.1"
description = 'dbt jaffle_shop'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Andrew Gramigna", email = "andrew.gramigna@brooklyndata.co" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dbt-snowflake==1.7.0",
]

[project.urls]
Documentation = "https://github.com/adgramigna/jaffle-shop#readme"
Issues = "https://github.com/adgramigna/jaffle-shop/issues"
Source = "https://github.com/adgramigna/jaffle-shop"
